# glow-up

./: .gitignore  Cargo.toml  Rocket.toml
db/: 0001_up.sql
src/: main.rs
www/static/: index.html
www/static/css/: global.css  home.css
www/static/html/: about.html  contact.html  index.html
www/static/js/: utils.js
